rutas corregidas, page creacion de ciudad agregada

--- a/src/routes/Tarjeta/TarjetaCreacion.css
+++ b/src/routes/Tarjeta/TarjetaCreacion.css
@@ -38,3 +38,20 @@
     width: 100%;
     margin-top: 25px;
   }
+
+  .button-cancel {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 10px;
+  }
+  
+  .btn-cancel {
+    text-decoration: none;
+    border: 1px solid #e9e9e9;
+    padding: 10px;
+    font-size: 12px;
+    border-radius: 5px;
+    transition: color 0.2s ease, background-color 0.2s ease;
+    color: #000;
+  }
